# Joint_Direct_LiDAR_Camera_Calibration

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  run.sh
include/camera/: generic_camera.hpp  generic_camera_base.hpp
include/vlcal/calib/: extrinsic_visual_camera_calibration.hpp  intrinsics_nid_cost.hpp  visual_camera_calibration.hpp
include/vlcal/common/: integrated_ct_icp_factor.hpp  ivox.hpp  vector3i_hash.hpp  visual_lidar_visualizer.hpp
include/vlcal/costs/: extrinsic_nid_cost.hpp  nid_cost.hpp
scripts/: initial_extrinsic.py  superglue_matches.py
src/: extrinsics_calibrate.cpp  initial_guess_auto.cpp  intrinsics_calibrate.cpp  preprocess.cpp  viewer.cpp
src/camera/: create_camera.cpp
src/test/: normalization.cpp  outliers.cpp  vis.cpp
src/vlcal/calib/: cost_calculator_nid.cpp  ex_visual_camera_calibration.cpp  extrinsic_visual_camera_calibration.cpp  visual_camera_calibration.cpp
src/vlcal/common/: visual_lidar_visualizer.cpp
