<?xml version="1.0"?>
<package format="3">
  <name>joint_calibration</name>
  <version>0.0.0</version>
  <description>LiDAR-Camera calibration based on NID-based direct image-pointcloud registration</description>

  <maintainer email="sys2048194132@sjtu.edu.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>

  <depend>fmt</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

</package>
